# gui-chaos-pytest

./: .env  .gitignore  README.md  index.html  package.json  pyproject.toml
.github/workflows/: ci-macos.yml
data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
data/attachments/: 2cb9e5c95b51d152.txt  36f779c84f627fc5.txt  421fa5cceb649420.txt  43e632d757707862.txt  473e575948e90ae1.txt  4baee3c1ac4202c6.txt  6573d61237e27736.txt  71018d1c9a268efd.txt  72489fd46ed69260.txt  7b2202d064e257ca.txt  7e0385f79d2bb68b.txt  8225f1e9311e3fbd.txt  8843708caa6a8526.txt  92e0177c7762cf01.txt  99d5ac999c8616bb.txt  a5c3e98c3a946078.txt  bfee14b62554adb3.txt  dcefe6d2973e70e6.txt
data/test-cases/: 1082a7a5aabdee66.json  11e90855380e560d.json  12232537563c7020.json  127f150759f8da6a.json  1536d41fef895623.json  16fba4bce9b7427.json  19e85c8738f067b7.json  1a30c3493e002220.json  1a39dfd0e34fb5b8.json  1c2b53e8524fc661.json  1d36ef30dce8e632.json  1dbd974368f74757.json  1e02a5ea3b2ac6cf.json  1f8a31a70e1fc4c8.json  200c07a334ab6eec.json  2020e8b26289708b.json  202bdcb630275343.json  236b9eda7e6d2448.json  23806200574b783b.json  25339ffc8213b62b.json  26f1cf8e7be6a494.json  (+211 more)
export/: influxDbData.txt  prometheusData.txt
fixtures/: constants.py
history/: duration-trend.json  history.json
tests/: test_previewApp_ImageComparison.py  test_previewApp_ImageComparison_ExportAs.py  test_previewApp_ImageComparison_SaveAs.py
widgets/: duration-trend.json  duration.json  severity.json  status-chart.json  suites.json  summary.json
(+3 files in other folders)
